Placeholders for key sections

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,6 +18,18 @@
         <li>
           <a href="{% url '/' %}">Community:</a>
         </li>
+        <li>
+          <a href="{% url '/blog' %}">Blog</a>
+        </li>
+        <li>
+          <a href="{% url '/learn' %}">Learn</a>
+        </li>
+        <li>
+          <a href="{% url '/gallery' %}">Gallery</a>
+        </li>
+        <li>
+          <a href="{% url '/support' %}">Support</a>
+        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
