Trailing slashes on navbar links for Knownly

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,16 +19,16 @@
           <a href="{% url '/' %}">Community:</a>
         </li>
         <li>
-          <a href="{% url '/blog' %}">Blog</a>
+          <a href="{% url '/blog/' %}">Blog</a>
         </li>
         <li>
-          <a href="{% url '/learn' %}">Learn</a>
+          <a href="{% url '/learn/' %}">Learn</a>
         </li>
         <li>
-          <a href="{% url '/gallery' %}">Gallery</a>
+          <a href="{% url '/gallery/' %}">Gallery</a>
         </li>
         <li>
-          <a href="{% url '/support' %}">Support</a>
+          <a href="{% url '/support/' %}">Support</a>
         </li>
       </ul>
     </div>
