Ignore local config

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
         <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand page-scroll" href="http://www.knownly.net">
+      <a class="navbar-brand page-scroll" href="//www.knownly.net">
         <span class="light">Knownly</span>
       </a>
     </div>
