Include Font Awesome

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -1,4 +1,5 @@
 @import "/bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "/bower_components/font-awesome/scss/font-awesome.scss";
 
 $grayscale-primary: #8CCDD3 !default;
 $grayscale-primary-border: #7ECED5 !default;
