Basic homepage with intro links to four major sections: gallery, guides, discussion, support

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,19 +16,22 @@
           <a href="#page-top"></a> <!-- removes .active on first li when scrolling -->
         </li>
         <li>
-          <a href="{% url '/' %}">Community:</a>
-        </li>
-        <li>
           <a href="{% url '/blog/' %}">Blog</a>
-        </li>
-        <li>
-          <a href="{% url '/learn/' %}">Learn</a>
         </li>
         <li>
           <a href="{% url '/gallery/' %}">Gallery</a>
         </li>
         <li>
+          <a href="{% url '/guides/' %}">Guides</a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/groups/knownly/?ref=knownly-community-navbar">Discuss</a>
+        </li>
+        <li>
           <a href="{% url '/support/' %}">Support</a>
+        </li>
+        <li>
+          <a href="https://www.knownly.net/signup/">Join Knownly</a>
         </li>
       </ul>
     </div>
