Blog plugin activated and initial blog index, post page and archive page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,7 +28,7 @@
           <a href="https://www.facebook.com/groups/knownly/?ref=knownly-community-navbar">Discuss</a>
         </li>
         <li>
-          <a href="{% url '/support/' %}">Support</a>
+          <a href="mailto:info@knownly.net?subject=Support%20request" target="_blank">Support</a>
         </li>
         <li>
           <a href="https://www.knownly.net/signup/">Join Knownly</a>
