--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,6 @@
     <title>{% block title %}{% endblock %}</title>
 
     {% block css_head %}
-      <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
       <link href="{% static 'css/simple.css' %}" rel="stylesheet">
     {% endblock %}
 
@@ -38,8 +37,9 @@
     </footer>
     
     {% block js_footer %}
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+      <script src="{% static '/js/scrolling.js' %}"></script>
     {% endblock %}
   </body>
 </html>
