--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,47 @@
   </head>
 
   <body {% block body_attrs %}{% endblock %}>
-    {% include "navbar.html" %}
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+            <i class="fa fa-bars"></i>
+          </button>
+          <a id="navbar-brand-logo"class="navbar-brand page-scroll" href="//www.knownly.net">
+            <span class="light">Knownly</span>
+          </a>
+        </div>
+
+        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+          <ul class="nav navbar-nav">
+            <li class="hidden">
+              <a href="#page-top"></a> <!-- removes .active on first li when scrolling -->
+            </li>
+            <li>
+              <a id="navbar-item-blog" href="{% url '/blog/' %}">Blog</a>
+            </li>
+            <li>
+              <a id="navbar-item-gallery" href="{% url '/gallery/' %}">Gallery</a>
+            </li>
+            <li>
+              <a id="navbar-item-guides" href="{% url '/guides/' %}">Guides</a>
+            </li>
+            <li>
+              <a id="navbar-item-discuss" href="https://www.facebook.com/groups/knownly/?ref=knownly-community-navbar" target="_blank">Discuss</a>
+            </li>
+            <li>
+              <a id="navbar-item-support" href="mailto:info@knownly.net?subject=Support%20request" target="_blank">Support</a>
+            </li>
+            <li>
+              <a id="navbar-item-join" href="https://www.knownly.net/signup/">Join Knownly</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container -->
+    </nav>
+
     
     {% block content %}{% endblock %}
 
@@ -40,6 +80,18 @@
       <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
       <script src="{% static '/js/scrolling.js' %}"></script>
+      <script type="text/javascript">
+        (function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
+        mixpanel.init("{{ MIXPANEL_TOKEN }}");
+        mixpanel.track("Community Page View", {'template': '{% current_page %}'});
+        mixpanel.track_links("#navbar-brand-logo", "Community Site Brand Logo clicked");
+        mixpanel.track_links("#navbar-item-blog", "Blog link clicked (Community:Navbar)");
+        mixpanel.track_links("#navbar-item-gallery", "Gallery link clicked (Community:Navbar)");
+        mixpanel.track_links("#navbar-item-guides", "Guides link clicked (Community:Navbar)");
+        mixpanel.track_links("#navbar-item-discuss", "Discuss link clicked (Community:Navbar)");
+        mixpanel.track_links("#navbar-item-support", "Support link clicked (Community:Navbar)");
+        mixpanel.track_links("#navbar-item-join", "Join link clicked (Community:Navbar)");
+      </script>
     {% endblock %}
   </body>
 </html>
