Adjust light color to #FDFDFD instead of #FFF

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -9,7 +9,7 @@ $grayscale-primary-dark-border: #2C9BA6 !default;
 
 $grayscale-dark: #000 !default;
 $grayscale-medium: #333 !default;
-$grayscale-light: #fff !default;
+$grayscale-light: #FDFDFD !default;
 
 $grayscale-body-font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
 $grayscale-headline-font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
