--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
             <i class="fa fa-bars"></i>
           </button>
           <a id="navbar-brand-logo"class="navbar-brand page-scroll" href="//www.knownly.net">
-            <span class="light">Knownly</span>
+            <img class="brand-logo-dark" src="{% static 'img/brand/Knownly_Logo_Web_Simple_140_x_40.png' %}" />
           </a>
         </div>
 
