--- a/templates/post.html
+++ b/templates/post.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div id="support" class="container content">
-	<div class="div col-md-8 col-md-offset-2">
+	<div class="div col-md-8 col-md-offset-2 content-frame">
 		<header id="header">
 			<a id="title" href="{% url '/blog/' %}">Knownly Blog</a>
 		</header>
