--- a/templates/guide.html
+++ b/templates/guide.html
@@ -4,33 +4,33 @@
 
 {% block css_head %}
   {{ block.super}}
-  <link href="{% static '/css/blog.css' %}" rel="stylesheet">
+  <link href="{% static '/css/guides.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 <div id="support" class="container content">
-	<div class="div col-md-8 col-md-offset-2 content-frame">
+	<div class="div col-md-8 col-md-offset-2">
 		<header id="header">
-			<a id="title" href="{% url '/blog/' %}">Knownly Blog</a>
+			<a id="title" href="{% url '/guides/' %}">Knownly guides</a>
 		</header>
 
-		<article class="post">
+		<article class="guide">
 			<header>
 				<h1>{{ title }}</h1>
 				<h2 class="headline">{{ headline }} </h2>
 			</header>
-			<section id="post-body">
+			<section id="guide-body">
 				<div class="thumbnail with-caption">
 					<img src="{% static img_src %}" />
 					<div class="caption text-right">{{ img_attr|safe }}</div>
 				</div>
 				{% block body %}
-					This is where the post contents is.
+					This is where the guides contents is.
 				{% endblock body %}
 			</section>
 			
-			<div id="post-meta" class="clearfix">
-				<div><span>Posted on </span> {{ date }}</div>
+			<div id="guides-meta" class="clearfix">
+				<div><span>Published on </span> {{ date }}</div>
 				<div><span>Written by</span> {{ author }}</div>
 
 				<section id="sharing">
@@ -49,21 +49,21 @@
 			</div> 
 		</article>
 
-		<div class="blog-footer">
-			<nav id="post-nav">
+		<div class="guides-footer">
+			<nav id="guides-nav">
 				<span class="prev">
-					{% if prevPost %}
-						<a href='/{{ prevPost.path }}'>
-							<span class="arrow">&larr;</span> {{ prevPost.title }}
+					{% if prevguides %}
+						<a href='/{{ prevguides.path }}'>
+							<span class="arrow">&larr;</span> {{ prevguides.title }}
 						</a>
 					{% endif %}
 				</span>
 				
 
 				<span class="next">
-					{% if nextPost %}
-						<a href='/{{ nextPost.path }}'>
-							{{ nextPost.title }} <span class="arrow">&rarr;</span>
+					{% if nextguides %}
+						<a href='/{{ nextguides.path }}'>
+							{{ nextguides.title }} <span class="arrow">&rarr;</span>
 						</a>
 					{% endif %}
 				</span>
