--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}{{ title }} | Knownly{% endblock title %}
+
+{% block title %}{{ title }} | Blog | Knownly Community{% endblock %}
+{% block og_title %}{{ title }} | Blog | Knownly Community{% endblock %}
 
 {% block css_head %}
   {{ block.super}}
