--- a/static/css/guides.scss
+++ b/static/css/guides.scss
@@ -439,3 +439,15 @@ h2.month {
 	h1 { font-size: 26px; }
 	.guides h2.headline { font-size: 20px; }
 }
+
+.guide-thumbnails {
+
+	.thumbnail {
+		min-height: 480px;
+		
+		.caption h3 {
+			min-height: 70px;
+		}
+	}
+
+}
