--- a/templates/guide.html
+++ b/templates/guide.html
@@ -6,13 +6,8 @@
 {% block og_title %}{{ title }}{% endblock %}
 {% block og_description %}{{ headline }}{% endblock %}
 
-{% block css_head %}
-  {{ block.super}}
-  <link href="{% static '/css/guides.css' %}" rel="stylesheet">
-{% endblock %}
-
 {% block content %}
-<div id="support" class="container content">
+<div id="guide">
 	<div class="div col-md-8 col-md-offset-2 content-frame">
 		<header id="header">
 			<a id="title" href="{% url '/guides/' %}">Knownly guides</a>
