--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -6,10 +6,10 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 50px;
-  font-family: $grayscale-body-font-family;
-  color: $grayscale-lightest;
-  background-color: $grayscale-dark;
-  -webkit-tap-highlight-color: transparentize($grayscale-lightest, 0.8);
+  font-family: $body-font-family;
+  color: $lightest;
+  background-color: $dark;
+  -webkit-tap-highlight-color: transparentize($lightest, 0.8);
   overflow-y: scroll;
 }
 
@@ -21,21 +21,21 @@ h5, .h5,
 h6, .h6 {
   margin: 0 0 35px;
   // text-transform: uppercase;
-  font-family: $grayscale-headline-font-family;
+  font-family: $headline-font-family;
   font-weight: 700;
   letter-spacing: 1px;
-  color: $grayscale-lightest;
+  color: $lightest;
 }
 
 p {
   margin: 0 0 10px;
   font-size: 18px;
   line-height: 1.5;
-  color: $grayscale-lightest;
+  color: $lightest;
 }
 
 .text-primary {
-  color: $grayscale-primary;
+  color: $primary;
 }
 
 .btn {
@@ -47,18 +47,30 @@ p {
 }
 
 .btn-primary {
-  color: $grayscale-lightest;
-  background-color: $grayscale-primary;
-  border-color: $grayscale-primary-border;
+  color: $lightest;
+  background-color: $primary;
+  border-color: $primary-border;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary.focus,
   .btn-primary:active, .btn-primary.active,
   .open>.btn-primary.dropdown-toggle {
 
-  color: $grayscale-lightest;
-  background-color: $grayscale-primary-dark;
-  border-color: $grayscale-primary-dark-border;
+  color: $lightest;
+  background-color: $primary-dark;
+  border-color: $primary-dark-border;
+}
+
+.btn-default {
+  @include button-variant($primary, transparentize(white, 1), $primary);
+
+  &:hover,
+  &:focus {
+    border: 1px solid $primary-dark-border;
+    outline: none;
+    color: $primary-dark;
+    background-color: $primary;
+  }
 }
 
 .twitter-follow-button {
@@ -66,7 +78,7 @@ p {
 }
 
 .badge {
-  background-color: $grayscale-lightest;
+  background-color: $lightest;
 }
 
 footer {
@@ -84,10 +96,161 @@ footer {
   }
 }
 
+a {
+  color: $primary;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    color: darken($primary,0.2);
+  }
+}
+
+.light {
+  font-weight: 400;
+}
+
+.navbar {
+  margin-bottom: 0;
+  border-bottom: 1px solid transparentize($medium, 0.7);
+  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+  background-color: $light;
+  color: $dark;
+
+  .navbar-brand {
+    font-weight: 700;
+    padding-top: 7px;
+    padding-bottom: 0px;
+
+    &:focus {
+      outline: none;
+    }
+
+    .navbar-toggle {
+      padding: 4px 6px;
+      font-size: 16px;
+
+      &:focus,
+      &:active {
+        outline: none;
+      }
+    }
+  }
+
+  a {
+    color: $dark;
+  }
+
+  ul.nav {
+
+    li {
+
+      &.active {
+        outline: none;
+        color: $primary;
+        background-color: transparent;
+      }
+
+      a {
+        -webkit-transition: background .3s ease-in-out;
+        -moz-transition: background .3s ease-in-out;
+        transition: background .3s ease-in-out;
+
+        &:hover,
+        &:focus {
+          outline: none;
+          color: $primary;
+          background-color: transparent;
+        }
+
+        &.active {
+          outline: none;
+          color: $primary;
+          background-color: transparent;
+        }
+      }
+
+      span {
+        position: relative;
+        display: block;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-right: 15px;
+        line-height: 20px;
+      }
+    }
+  }
+}
+
+@media(min-width:$screen-xs-max) {
+
+  .navbar {
+    padding: 10px 0;
+    border-bottom: none;
+    background-color: transparent;
+    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    transition: background .5s ease-in-out,padding .5s ease-in-out;
+    letter-spacing: 1px;
+  }
+
+  .top-nav-collapse {
+    padding: 0;
+    background-color: $light;
+    border-bottom: 1px solid transparentize($medium, 0.7);
+    color: $dark;
+    a {
+      padding: 0;
+      color: $dark;
+      img {
+        margin-top: 0px;
+      }
+    }
+  }
+
+  p {
+    margin: 0 0 15px;
+    font-size: 16px;
+    line-height: 1.6;
+    color: $dark;
+  }
+
+}
+
+.content {
+  padding: 80px 0;
+}
+
+.panel-default {
+  border-color: $medium;
+  background-color: $dark;
+  color: $lightest;
+
+  .panel-heading {
+    background-color: $medium;
+    color: $lightest;
+    font-size: 18px;
+  }
+
+  p {
+    color: $lightest;
+  }
+}
+
+.well {
+  color: $lightest;
+  font-weight: 500;
+  background-color: $dark;
+}
+
+
 @media (min-width: 768px) {
   body {
     background-image: url("/static/img/patterns/cubes.png");
-    color: $grayscale-dark;
+    color: $dark;
   }
 
   h1, .h1,
@@ -96,14 +259,14 @@ footer {
   h4, .h4,
   h5, .h5,
   h6, .h6 {
-    color: $grayscale-dark;
+    color: $dark;
   }
 
   p {
-    color: $grayscale-dark;
+    color: $dark;
   }
 
   .lead {
-    color: $grayscale-dark;
+    color: $dark;
   }
 }
