--- a/static/css/knownly.scss
+++ b/static/css/knownly.scss
@@ -1,22 +1,21 @@
 @import "/bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "/bower_components/font-awesome/scss/font-awesome.scss";
 
-$grayscale-primary: #27A9E1 !default;
-$grayscale-primary-border: #278AE1 !default;
+$primary: #27A9E1 !default;
+$primary-border: #278AE1 !default;
 
-$grayscale-primary-dark: #2752E1 !default;
-$grayscale-primary-dark-border: #133EE1 !default;
+$primary-dark: #2752E1 !default;
+$primary-dark-border: #133EE1 !default;
 
-$grayscale-dark: #030303 !default;
-$grayscale-medium: #333 !default;
-$grayscale-light: #F4F4F4 !default;
-$grayscale-lightest: #FDFDFD !default;
+$dark: #030303 !default;
+$medium: #333 !default;
+$light: #F4F4F4 !default;
+$lightest: #FDFDFD !default;
 
-$grayscale-body-font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
-$grayscale-headline-font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+$body-font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+$headline-font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
 
 @import "/static/css/_base";
-@import "/static/css/_simple";
 @import "/static/css/pages/_blog";
 @import "/static/css/pages/_faq";
 @import "/static/css/pages/_gallery";
