--- a/static/css/pages/_blog.scss
+++ b/static/css/pages/_blog.scss
@@ -6,11 +6,11 @@ a,
 #post-list li:hover .dates,
 #title:hover {
   text-decoration: none; 
-  color: $grayscale-primary-dark;
+  color: $primary-dark;
 }
 
 p a {
-  color: $grayscale-primary;
+  color: $primary;
 }
 
 /*Transitions*/
@@ -34,7 +34,7 @@ em, i { font-style: italic; }
   font-size: 19px;
   margin: 0;
   padding-bottom: 10px;
-  color: $grayscale-primary;
+  color: $primary;
 }
 
 .description {
@@ -47,7 +47,7 @@ em, i { font-style: italic; }
 h1 {
   font-size: 30px;
   letter-spacing: -1px;
-  color: $grayscale-primary;
+  color: $primary;
   font-weight: bold;
 }
 
@@ -78,7 +78,7 @@ h2 {
 #post-list h2 {
   font-size: 16px;
   font-weight: 400;
-  color: $grayscale-light;
+  color: $light;
   max-width: 400px;
   margin-top: 2px;
 }
@@ -225,7 +225,7 @@ h6 {
   }
 
   a {
-    color: $grayscale-primary;
+    color: $primary;
     display: block;
     font-size: 22px;
     font-weight: 500;
@@ -315,13 +315,13 @@ h6 {
   font-size: 23px;
   margin-left: 1px;
   margin-top: 4px;
-  color: $grayscale-primary;
+  color: $primary;
   display: inline-block;
   vertical-align: middle;
 }
 
 #sharing a:hover {
-  color: $grayscale-primary-dark;
+  color: $primary-dark;
 }
 
 /* Post Navigation */
@@ -395,7 +395,7 @@ h2.month {
   display: block;
   font-size: 17px/1.7;
   font-weight: 500;
-  color: $grayscale-primary;
+  color: $primary;
 }
 
 #archive-list .dates {
@@ -412,7 +412,7 @@ h2.month {
 }
 
 .content-frame {
-  background: $grayscale-dark;
+  background: $dark;
   border-radius: 5px;
   padding: 10px;
 }
@@ -445,7 +445,7 @@ h2.month {
 @media (min-width: 768px) {
 
   .content-frame {
-    background-color: $grayscale-lightest;
+    background-color: $lightest;
   }
 }
 
