--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -4,13 +4,12 @@ html {
 }
 
 body {
+  background-image: url("/static/img/patterns/cubes.png");
+  font-family: $body-font-family;
   /* Margin bottom by footer height */
   margin-bottom: 50px;
-  font-family: $body-font-family;
-  color: $lightest;
-  background-color: $dark;
-  -webkit-tap-highlight-color: transparentize($lightest, 0.8);
   overflow-y: scroll;
+  -webkit-tap-highlight-color: transparentize($lightest, 0.8);
 }
 
 h1, .h1,
@@ -19,8 +18,6 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  margin: 0 0 35px;
-  // text-transform: uppercase;
   font-family: $headline-font-family;
   font-weight: 700;
   letter-spacing: 1px;
@@ -85,11 +82,15 @@ footer {
   margin-top: 50px;
 
   .footer {
-    position: absolute;
     bottom: 0;
-    width: 100%;
-    /* Set the fixed height of the footer here */
     height: 40px;
+    position: absolute;
+    width: 100%;
+    
+    .container {
+      max-width: 500px;
+    }
+
     p {
       margin: 0;
     }
@@ -240,19 +241,7 @@ a {
   }
 }
 
-.well {
-  color: $lightest;
-  font-weight: 500;
-  background-color: $dark;
-}
-
-
 @media (min-width: 768px) {
-  body {
-    background-image: url("/static/img/patterns/cubes.png");
-    color: $dark;
-  }
-
   h1, .h1,
   h2, .h2,
   h3, .h3,
