--- a/static/css/knownly.scss
+++ b/static/css/knownly.scss
@@ -16,6 +16,7 @@ $body-font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 $headline-font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
 
 @import "/static/css/_base";
+@import "/static/css/_article";
 @import "/static/css/pages/_blog";
 @import "/static/css/pages/_faq";
 @import "/static/css/pages/_gallery";
