--- a/static/css/pages/_blog.scss
+++ b/static/css/pages/_blog.scss
@@ -2,8 +2,8 @@
 /*Accent color*/
 a, 
 #title,
-#post-list a:hover,
-#post-list li:hover .dates,
+.post-list a:hover,
+.post-list li:hover .dates,
 #title:hover {
   text-decoration: none; 
   color: $primary-dark;
@@ -16,7 +16,7 @@ p a {
 /*Transitions*/
 a,
 #post-nav a,
-#post-list a  { 
+.post-list a  { 
   -webkit-transition: all 0.15s ease;
   -moz-transition: all 0.15s ease;
   -ms-transition: all 0.15s ease;
@@ -44,174 +44,28 @@ em, i { font-style: italic; }
   color: #aaa;
 }
 
-h1 {
-  font-size: 30px;
-  letter-spacing: -1px;
-  color: $primary;
-  font-weight: bold;
-}
-
-h2 {
-  font-style: italic;
-  font-size: 19px;
-  color: #bbb;
-}
-
-.post h1 {
-  margin-bottom: 10px;
-}
-
-.post h2 {
-  margin-bottom:2 0px;
-  color: inherit;
-  font-size: 18px;
-  font-weight: 400;
-}
-
-.post h2.headline {
-  font-style: italic;
-  font-size: 16px;
-  color: #aaa;
-  margin: -5px 0 40px 0;
-}
-
-#post-list h2 {
-  font-size: 16px;
-  font-weight: 400;
-  color: $light;
-  max-width: 400px;
-  margin-top: 2px;
-}
-
-h3, h4, h5 { color:#333; }
-
-h3 { font-size:20px; font-weight: 500; }
-h4 { font-size:16px; font-weight:bold; }
-h5 { font-size:15px; font-weight: bold; }
-
-h6 {
-  font-size: 13px;
-  font-weight: bold;
-  color: #666;
-  margin-bottom: 6px;
-}
-
-.post {
-  p {
-    font-size: 17px;
-    line-height:1.9;
-    letter-spacing: .125em;
-    margin-bottom: 25px;
-  }
-
-  p.small { 
-    color: #bbb; 
-    font-size: 14px; 
-    line-height: 1.5; 
-    display: block;
-  }
-
-  blockquote { 
-    padding-left: 15px; 
-    border-left: 3px solid #eee; 
-  }
-
-  hr {
-    display: block;
-    border: none;
-    height: 3px;
-    margin: 40px auto;
-    background: #f4f4f4;
-  }
-
-  span.code {
-    font-family:Menlo, Monaco, Courier;
-    background-color:#EEE;
-    font-size:14px;
-  }
-
-  ul {
-    margin-bottom: 25px;
-    padding:0;
-  }
-  li {
-    font-size: 17px;
-    line-height:1.9;
-    letter-spacing: .125em;
-    margin-left: 20px;
-    list-style-type:circle;
-    list-style-position:inside;
-  }
-
-  pre { 
-    font-family:Menlo, Monaco, Courier; 
-    white-space:pre-wrap; 
-    border: 1px solid #ddd; 
-    padding:20px; 
-    background-color:#fdfdfd; 
-    font-size:14px; 
-    overflow:auto; 
-    border-radius: 3px;
-  }
-
-  table {
-    width: 100%;
-    margin: 40px 0;
-    border-collapse: collapse;
-    font-size: 13px;
-    line-height: 1.5em; 
-  }
-
-  th,td {
-    text-align: left;
-    padding-right: 20px;
-    vertical-align: top;
-  }
-
-  table td,td {
-    border-spacing: none;
-    border-style: solid;
-    padding: 10px 15px;
-    border-width: 1px 0 0 0;  
-  }
-
-  tr>td {
-    border-top: 1px solid #eaeaea;
-  }
-
-  tr:nth-child(odd)>td {
-    background: #fcfcfc;
-  }
-
-  thead th,th {
-    text-align: left;
-    padding: 10px 15px;
-    height: 20px;
-    font-size: 13px;
-    font-weight: bold;
-    color: #444;
-    border-bottom: 1px solid #dadadc;
-    cursor: default;
-    white-space: nowrap;
-  }
-
-  img {
-    width: 100%;
-    max-width: 100%;
-    border-radius: 3px;
-  }
-
-}
-
-/* Post List */
-#post-list,#archive-list {
+.post-list {
   margin-top: 100px;
   padding-left: 0;
 }
 
-#post-list {
+.post-list {
+  h1 {
+    font-size: 30px;
+    letter-spacing: -1px;
+    color: $primary;
+    font-weight: bold;
+  }
 
-  li,#archive-list li {
+  h2 {
+    font-size: 16px;
+    font-weight: 400;
+    color: $light;
+    max-width: 400px;
+    margin-top: 2px;
+  }
+
+  li {
     list-style-type: none;
   }
 
@@ -241,7 +95,21 @@ h6 {
   }
 }
 
-#post-list-footer {
+h3, h4, h5 { color:#333; }
+
+h3 { font-size:20px; font-weight: 500; }
+h4 { font-size:16px; font-weight:bold; }
+h5 { font-size:15px; font-weight: bold; }
+
+h6 {
+  font-size: 13px;
+  font-weight: bold;
+  color: #666;
+  margin-bottom: 6px;
+}
+
+
+.post-list-footer {
   border-top: 1px solid #eee;
   margin-top: 20px;
   padding-top: 40px;
@@ -279,10 +147,6 @@ h6 {
   border-bottom: 1px solid #eee;
 }
 
-.post {
-  margin: 20px 0 0 0;
-}
-
 #post-meta {
   font-size: 13px;
   font-weight: bold;
@@ -303,25 +167,6 @@ h6 {
 #post-meta div {
   margin: 0 25px 0 0;
   float: left;
-}
-
-#sharing {
-  float: right;
-  margin: -2px;
-}
-
-#sharing a {
-  font-size: 20px;
-  font-size: 23px;
-  margin-left: 1px;
-  margin-top: 4px;
-  color: $primary;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-#sharing a:hover {
-  color: $primary-dark;
 }
 
 /* Post Navigation */
@@ -411,57 +256,18 @@ h2.month {
   color: #5694f1;
 }
 
-.content-frame {
-  background: $dark;
-  border-radius: 5px;
-  padding: 10px;
-}
-
-.thumbnail {
-
-  .with-caption {
-    display: inline-block;
-    background: #f4f4f4;
-    color: #999;
-    margin-bottom: 20px;
-
-    p {
-      margin: 0;
-      padding-top: 0.5em;
-    }
-
-    small:before {
-      content: '\2014 \00A0';
-    }
-
-    small {
-      width: 100%;
-      text-align: right;
-      display: inline-block;
-    }
-  }
-}
-
-@media (min-width: 768px) {
-
-  .content-frame {
-    background-color: $lightest;
-  }
-}
-
 /* Media Queries */
 @media screen and (max-width: 540px) {
   #header { margin-bottom: 60px; border-bottom: 1px solid #eee; }
-  .post { margin: 40px 0; }
   #footer { margin-top: 60px; }
 
-  #post-list, #archive-list { margin-top: 0; }
+  .post-list, #archive-list { margin-top: 0; }
   #post-meta { margin-top: 20px; }
 
   #title { font-size: 17px; }
-  #post-list .dates { display: none; }
+  .post-list .dates { display: none; }
 
-  #post-list-footer { margin-top: 20px; padding-top: 40px; }
+  .post-list-footer { margin-top: 20px; padding-top: 40px; }
 
   h1 { font-size: 26px; }
   .post h2.headline { font-size: 20px; }
