--- a/templates/gallery-site.html
+++ b/templates/gallery-site.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div id="support">
-	<div class="div col-md-8 col-md-offset-2 content-frame">
+	<div class="div col-md-8 col-md-offset-2">
 		<header id="header">
 			<a id="title" href="{% url '/gallery/' %}">Knownly gallery</a>
 		</header>
